概要を作成した

--- a/company.html
+++ b/company.html
@@ -19,7 +19,7 @@
 <h1 id="logo"><a href="index.html">Sample Company</a></h1>
 
 <address>
-TEL:0120-123-789
+TEL:0120-7942-0174
 </address>
 
 </header>
@@ -36,24 +36,38 @@ TEL:0120-123-789
 
 <table class="ta1">
 <tr>
-<th>見出し</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>会社名</th>
+<td>株式会社粷谷鎮
+    （きくたにちん）
+</td>
 </tr>
 <tr>
-<th>見出し</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>本社所在地</th>
+<td>〒570-8540
+    西海道札幌市野下町3-3-0
+</td>
 </tr>
 <tr>
-<th>見出し</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>設立</th>
+<td>2005年3月30日</td>
 </tr>
 <tr>
-<th>見出し</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>資本金</th>
+<td>48000マルー</td>
 </tr>
 <tr>
-<th>見出し</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>主要事業</th>
+<td>ソフトウェア開発 / アプリケーション開発 / 
+    ハードウェアソリューション / 家庭用ゲーム機向けコンテンツ
+</td>
+</tr>
+<tr>
+<th>従業員数</th>
+<td>8200人</td>
+</tr>
+<tr>
+<th>代表名</th>
+<td>糀谷鎮</td>
 </tr>
 </table>
 
