サービス情報を更新した

--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
 <h1 id="logo"><a href="index.html">Sample Company</a></h1>
 
 <address>
-TEL:0120-000-000
+TEL:0120-7942-0174
 </address>
 
 </header>
@@ -37,47 +37,50 @@ TEL:0120-000-000
 <div class="list-normal">
 
 <div class="list">
-<figure><img src="images/1.jpg" alt=""></figure>
+<figure><img src="images/softwea.jpg" alt=""></figure>
 <div class="text">
-<h4>見出しをここに入れます</h4>
-<p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。</p>
+<h4>ソフトウェア開発</h4>
+<p>私たちはいままでにないゲームソフトを愛を持って開発します。</p>
 </div>
 </div>
 
 <div class="list">
-<figure><img src="images/1.jpg" alt=""></figure>
+<figure><img src="images/glitch.png" alt=""></figure>
 <div class="text">
-<h4>見出しをここに入れます</h4>
-<p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。</p>
+<h4>ハードウェア開発</h4>
+<p>「新たな時代の訪れ」を開発理念として新規格のゲーム機の開発に日々励んでおります。</p>
 </div>
 </div>
 
 <div class="list">
-<figure><img src="images/1.jpg" alt=""></figure>
+<figure><img src="images/pro.png" alt=""></figure>
 <div class="text">
-<h4>見出しをここに入れます</h4>
-<p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。</p>
+<h4>eスポーツチーム運営</h4>
+<p>大乱闘スマッシュブラザーズSPECIAL部門<br>
+     麻雀部門<br>
+     League of Legends部門<br>
+    レインボーシックス シージ部門<br> 
+    Valorant部門
+</p>
+</div>
+</div>
+
+
+
+<div class="list">
+<figure><img src="images/tiiho.png" alt=""></figure>
+<div class="text">
+<h4>地鳳</h4>
+<p>リアルを追求したリアル重視麻雀サイト<br>
+    ～愛を込めて最高の麻雀をあなたに～</p>
 </div>
 </div>
 
 <div class="list">
-<figure><img src="images/1.jpg" alt=""></figure>
+<figure><img src="images/pikumin.png" alt=""></figure>
 <div class="text">
-<p>見出しが不要な場合はここに説明だけ入れて下さい。サンプルテキスト。</p>
-</div>
-</div>
-
-<div class="list">
-<figure><img src="images/1.jpg" alt=""></figure>
-<div class="text">
-<p>見出しが不要な場合はここに説明だけ入れて下さい。サンプルテキスト。</p>
-</div>
-</div>
-
-<div class="list">
-<figure><img src="images/1.jpg" alt=""></figure>
-<div class="text">
-<p>見出しが不要な場合はここに説明だけ入れて下さい。サンプルテキスト。</p>
+<h4>ピクミン６</h4>
+<p>食べられても、投げられても、貴方に尽くします</p>
 </div>
 </div>
 
