CGを正式名称に変更した

--- a/faq.html
+++ b/faq.html
@@ -93,7 +93,7 @@ TEL:0120-7942-0174
             <td>イモータル1</td>
         </tr>
         <tr>
-            <td>CG部門</td>
+            <td>レインボーシックスシージ部門</td>
             <td>ダイヤモンド1</td>
         </tr>
         
