会社名を変更しました

--- a/company.html
+++ b/company.html
@@ -37,8 +37,7 @@ TEL:0120-7942-0174
 <table class="ta1">
 <tr>
 <th>会社名</th>
-<td>株式会社粷谷鎮
-    （きくたにちん）
+<td>株式会社KIKUTITANI
 </td>
 </tr>
 <tr>
@@ -63,7 +62,7 @@ TEL:0120-7942-0174
 </tr>
 <tr>
 <th>従業員数</th>
-<td>8200人</td>
+<td>8000人</td>
 </tr>
 <tr>
 <th>代表名</th>
