--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ TEL:0120-000-000
 <dt>2024/07/17</dt>
 <dd>初心者向けホームページテンプレート tp_beginner9公開。</dd>
 <dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
+<dd>万任堂グリッチの開発。</dd>
 <dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
+<dd>lol部門に所属しているY4kkunを除名しました。</dd>
+<dt>2018/07/17</dt>
+<dd>麻雀のプロリーグ部門を設立した。</dd>
+<dt>2017/03/04</dt>
+<dd>Eスポーツプロチームキクチタニコウジナイツを設立。</dd>
 </dl>
 
 </section>
