--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <header>
 
-<h1 id="logo"><a href="index.html">Sample Company</a></h1>
+<h1 id="logo"><a href="index.html">株式会社KIKUTITANI</a></h1>
 
 <address>
-TEL:0120-000-000
+TEL:0120-7942-0174
 </address>
 
 </header>
@@ -37,25 +37,43 @@ TEL:0120-000-000
 
 <section>
 
-<h2>お知らせ</h2>
+<h2>トピックス</h2>
 
-
+<dl class="new">
+<dt>2024/08/21</dt>
+<dd>地鳳オンライン公式大会の選手紹介、第一試合ストリーミング</dd>
+<dt>2024/07/20</dt>
+<dd>地鳳オンライン公式大会のお知らせ。</dd>
+<dt>2024/05/17</dt>
+<dd>Mリーグ2023-24シーズンの糀援ありがとうございました。</dd>
+<dt>2022/01/12</dt>
+<dd>eスポーツチームにValorant部門を設立しました。</dd>
+<dt>2020/8/12</dt>
+<dd>麻雀部門設立記念にオンラインストアを開設しました。</dd>
+<dt>2020/12/03</dt>
+<dd>万任堂Glitchを発売しました。</dd>
+</dl>
 
 </section>
 
 <section>
 
-<h2>テンプレートのご利用前に必ずお読み下さい</h2>
+<h2>更新情報</h2>
 
-<h3>利用規約のご案内</h3>
-<p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『初心者向けホームページテンプレート tp_beginner9』です。必ずダウンロード先のサイトの<a href="https://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
-<p><strong class="color-check">HP最下部の著作表示『Web Design:Template-Party』は無断で削除しないで下さい。</strong><br>
-わざと見えなく加工する事も禁止です。</p>
-<p><strong class="color-check">下部の著作を外したい場合は</strong><br>
-<a href="https://template-party.com/">Template-Party</a>の<a href="https://template-party.com/member.html">ライセンス契約</a>を行う事でHP下部の著作を外す事ができます。</p>
-
-<h3>当テンプレートの詳しい使い方は</h3>
-<p><a href="manual_template.html">こちらをご覧下さい。</a></p>
+<dl class="new">
+    <dt>2024/9/13</dt>
+    <dd>万任堂オンラインを放送します。</dd>
+    <dt>2024/07/21</dt>
+    <dd>ピクミン6を発売しました。</dd>
+    <dt>2023/07/04</dt>
+    <dd>LoL部門Y4kkun選手の契約を解除しました。</dd>
+    <dt>2022/01/11</dt>
+    <dd>コウジナイツにValorant部門を設立しました。</dd>
+    <dt>2020/8/12</dt>
+    <dd>コウジナイツに麻雀部門を設立しました。</dd>
+    <dt>2020/12/03</dt>
+    <dd>万任堂Glitchを発売しました。</dd>
+    </dl>
 
 </section>
 
