--- a/company.html
+++ b/company.html
@@ -16,7 +16,7 @@
 
 <header>
 
-<h1 id="logo"><a href="index.html">Sample Company</a></h1>
+<h1 id="logo"><a href="index.html">株式会社KIKUTITANI</a></h1>
 
 <address>
 TEL:0120-7942-0174
